<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222222"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/header"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#7FC232" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/desc"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/desc"
                    android:textSize="14sp"
                    android:textColor="#7FC232"/>

                <ImageView
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="125dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/rating"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>